[package]
name = "swc-plugin-js-transformer"
version = "0.0.1"
edition = "2021"
authors = ["OJ Kwon <kwon.ohjoong@gmail.com>"]
description = "A swc plugin runs JS visitor transformer"
repository = "https://github.com/kwonoj/swc-plugin-js-transformer"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_core = { version = "0.79.14", features = [
  "ecma_ast",
  "ecma_parser",
  "ecma_plugin_transform",
] }
boa_engine = { version = "0.17.0" }
