[package]
name = "swc-plugin-js-transformer"
version = "0.0.1"
edition = "2021"
authors = ["OJ Kwon <kwon.ohjoong@gmail.com>"]
description = "A swc plugin runs JS visitor transformer"
repository = "https://github.com/kwonoj/swc-plugin-js-transformer"

[lib]
crate-type = ["cdylib"]

[dependencies]
boa_engine = { version = "0.17.0" }
serde = { version = "1.0.160" }
serde_json = { version = "1.0.96" }
lazy-regex = { version = "3.0.0" }
swc_core = { version = "0.79.14", features = [
  "ecma_ast",
  "ecma_ast_serde",
  "ecma_parser",
  "ecma_codegen",
  "ecma_plugin_transform",
] }
